<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.pyb.profile.MyProfileFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_my_profile" />

    <fragment
        android:id="@+id/navigation_course"
        android:name="com.example.pyb.Course.CourseFragment"
        android:label="@string/title_course"
        tools:layout="@layout/fragment_course" />

    <fragment
        android:id="@+id/navigation_announcement"
        android:name="com.example.pyb.announcement.AnnouncementFragment"
        android:label="@string/title_announcement"
        tools:layout="@layout/fragment_announcement" />

    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.example.pyb.settings.SettingsFragment"
        android:label="Setting"
        tools:layout="@layout/fragment_settings" />
</navigation>