<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/frame_setting"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background_color">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="110dp"
            android:layout_height="110dp"
            android:src="@drawable/setting_logo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="600dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/bg_rounded_top_grey_30dp"
            android:orientation="vertical"
            android:paddingHorizontal="20dp"
            android:paddingVertical="26dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView"
            app:layout_constraintVertical_bias="0.0">

            <TextView
                style="@style/TextBig"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/setting" />

            <TextView
                android:id="@+id/text_view_personal_information"
                style="@style/TextNormal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/personal_information"
                app:drawableEndCompat="@drawable/person_logo_black" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="9dp"
                android:background="@color/black" />

            <TextView
                android:id="@+id/text_view_password"
                style="@style/TextNormal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="19dp"
                android:text="@string/password"
                app:drawableEndCompat="@drawable/lock_logo_black" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="9dp"
                android:background="@color/black" />

            <TextView
                android:id="@+id/text_view_notification"
                style="@style/TextNormal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="19dp"
                android:text="@string/notification"
                app:drawableEndCompat="@drawable/bell_logo_black" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="9dp"
                android:background="@color/black" />

            <TextView
                style="@style/TextBig"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="22dp"
                android:text="@string/about" />

            <TextView
                android:id="@+id/text_view_about"
                style="@style/TextNormal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/about_us"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="9dp"
                android:background="@color/black" />

            <TextView
                android:id="@+id/text_view_helpcenter"
                style="@style/TextNormal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/help_center"
                app:drawableEndCompat="@drawable/question_logo_black"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="9dp"
                android:background="@color/black" />

            <TextView
                android:id="@+id/text_view_logout"
                style="@style/TextNormal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/log_out"
                app:drawableEndCompat="@drawable/signout_logo_black"/>
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>
