<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_bg"
    tools:context=".profile.MyProfileFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/profile_pic"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_gravity="center"
                android:src="@drawable/dream" />

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/btnEdit"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_marginLeft="-35dp"
                android:layout_marginTop="110dp"
                android:background="@drawable/circle" />

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginLeft="-29dp"
                android:layout_marginTop="115dp"
                android:src="@drawable/edit" />

        </LinearLayout>

        <TextView
            android:id="@+id/tvstudent_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/profile_pic"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:hint="@string/student_name"
            android:textAlignment="center"
            android:textColor="@color/text_color"
            android:textSize="20dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvstudent_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvstudent_name"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:hint="@string/student_email"
            android:textAlignment="center"
            android:textColor="@color/text_color"
            android:textSize="20dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvstudent_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvstudent_email"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="20dp"
            android:hint="@string/student_location"
            android:textAlignment="center"
            android:textColor="@color/text_color"
            android:textSize="20dp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_reminder"
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:layout_alignParentBottom="true"
        android:background="@drawable/rectangle"
        android:backgroundTint="@color/boxcontent_bg"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvmyprofile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="10dp"
            android:text="@string/myprofile"
            android:textColor="@color/text_color3"
            android:textSize="20dp"
            android:textStyle="bold" />


        <LinearLayout
            android:id="@+id/ll_detail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvdetail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="40dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="5dp"
                android:onClick="@{profile.btnDetail}"
                android:text="@string/detail"
                android:textColor="@color/text_color3"
                android:textSize="15dp" />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_below="@id/tvdetail"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:backgroundTint="@color/text_color3"
                android:onClick="@{profile.btnDetail}"
                app:cardCornerRadius="5dp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_grade"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvgrade"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="40dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="5dp"
                android:text="@string/grade"
                android:textColor="@color/text_color3"
                android:textSize="15dp" />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_below="@id/tvdetail"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:backgroundTint="@color/text_color3"
                app:cardCornerRadius="5dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvreminder"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="40dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="5dp"
                android:text="@string/reminder"
                android:textColor="@color/text_color3"
                android:textSize="15dp" />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_below="@id/tvdetail"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:backgroundTint="@color/text_color3"
                app:cardCornerRadius="5dp" />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>