<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_bg"
    android:orientation="vertical">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/profile_pic"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_gravity="center"
        android:layout_marginTop="90dp"
        android:src="@drawable/dream"
        android:translationZ="90dp" />

    <LinearLayout
        android:id="@+id/ll_reminder"
        android:layout_width="match_parent"
        android:layout_height="535dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="60dp"
        android:layout_marginTop="-40dp"
        android:background="@drawable/rectangle"
        android:backgroundTint="@color/boxcontent_bg"
        android:orientation="vertical">


        <TextView
            android:id="@+id/tvmyprofile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            android:text="@string/myprofile"
            android:textColor="@color/text_color3"
            android:textSize="20dp"
            android:textStyle="bold" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/twNama"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="350dp"
            android:layout_gravity="center"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            android:hint="@string/nama">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etNama"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/twNpm"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="350dp"
            android:layout_gravity="center"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            android:hint="NPM">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etNpm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/twEmail"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="350dp"
            android:layout_gravity="center"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            android:hint="@string/student_mail">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/twPhoneNum"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="350dp"
            android:layout_gravity="center"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            android:hint="@string/phonenum">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etPhoneNum"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/twAddress"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="350dp"
            android:layout_gravity="center"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            android:hint="@string/address">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center"
            android:layout_marginTop="10dp">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnEditAdd"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/orange"
                android:layout_marginRight="30dp"
                android:text="Edit Address"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnUpdate"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/background_color"
                android:text="UPDATE"/>
        </LinearLayout>

    </LinearLayout>
</LinearLayout>